# argparse

./: .clang-format  .cmake-format.json  .gitignore  .versionrc.js  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: Catch.cmake  CatchAddTests.cmake  EnableExtraCompilerWarnings.cmake
examples/: CMakeLists.txt  example-00.cpp
include/argparse/: argparse.hpp
test/: CMakeLists.txt  parser.cpp  result.cpp  tmp.cpp
